--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>PDF question answering </h1>
     <section>
-      <article>This is a placeholder for an explanation of what this app can do and how to use it. I will also add a YouTube video of how to generate OpenAI's API</article>
+      <article>This is a web application that allows users to ask questions about the content of a PDF file all you need to do is upload your pdf file and your OpenAI API key. If you don't know how to get the API key you can watch the YouTube video below.</article>
       <iframe width="300" height="300"
 src="https://www.youtube.com/embed/_vEJ07K0VPs?controls=0">
       </iframe>
@@ -28,8 +28,7 @@ src="https://www.youtube.com/embed/_vEJ07K0VPs?controls=0">
         <label>Question: <input type="text" name="question" required></label>
         <button type="submit">query</button>
       </form>
-      <textarea row="6">{{ answer }}</textarea>
-      <p>{{ answer }}</p>
+      <textarea rows="8">{{ answer }}</textarea>
     </section>
   </body>
 </html>
