--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,10 @@ src="https://www.youtube.com/embed/_vEJ07K0VPs?controls=0">
         <label>Question: <input type="text" name="question" required></label>
         <button type="submit">query</button>
       </form>
+      <p class="source">Answer</p>
       <textarea rows="8">{{ answer }}</textarea>
+      <p class="source">Source document</p>
+      <textarea rows="8">{{ doc }}</textarea>
     </section>
   </body>
 </html>
